--- a/components/BoxContent/BoxContent.module.css
+++ b/components/BoxContent/BoxContent.module.css
@@ -1,4 +1,26 @@
 .boxContent {
   flex-grow: 1;
   padding: 10px;
+  overflow: scroll;
+}
+
+.card {
+  border: 1px solid #ddd;
+  padding: 10px;
+  width: 500px;
+  height: fit-content;
+  margin-bottom: 20px;
+}
+
+.card p {
+  overflow-wrap: break-word;
+}
+
+.time {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.time > i {
+  font-size: 12px;
 }
