--- a/styles/Chat.module.css
+++ b/styles/Chat.module.css
@@ -13,6 +13,7 @@
   border: 1px solid #706e6e;
   display: flex;
   flex-direction: column;
+  gap: 10px;
   padding: 10px;
   width: 600px;
   height: 600px;
